# projeto_flask

exercicios/exercicio/: app.py
exercicios/templates/: base.html  gerar_cnpj.html  gerar_cpf.html  home.html  validar_cnpj.html  validar_cpf.html
flask-project/: README.md  pyproject.toml
flask-project/flask_project/: app.py
flask-project/flask_project/domain/: produtos.py
flask-project/flask_project/templates/: base.html  contato.html  home.html  produto.html  produtos.html
projeto_flask-main/: pyproject.toml
projeto_flask-main/projeto_flask/: app.py
projeto_flask-main/templates/: produtos.html
projeto_flask/projeto_flask/: app.py
projeto_flask/templates/: base.html  cadastro-produto.html  home.html  produto.html  produtos.html
