[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["Mateus Cruzatto <mateusc.ramos@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
python-slugify = "^8.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
